[Docs][blog] Fix vi blog ASCII Vietnamese diacritics in 4 posts

--- a/i18n/vi/docusaurus-plugin-content-blog/2023/07-22.md
+++ b/i18n/vi/docusaurus-plugin-content-blog/2023/07-22.md
@@ -1,79 +1,79 @@
 ---
 slug: hex-school-node
-title: 'Khoa hoc Node.js doanh nghiep cua HexSchool'
+title: 'Khóa học Node.js doanh nghiệp của HexSchool'
 authors: wuzhe0912
 tags: [engineering]
 ---
 
-Mot vai suy nghi va nhin lai sau khi hoan thanh khoa hoc Node.js doanh nghiep cua HexSchool.
+Một vài suy nghĩ và nhìn lại sau khi hoàn thành khóa học Node.js doanh nghiệp của HexSchool.
 
 <!--truncate-->
 
-## Tai sao chon khoa hoc nay? Giai quyet van de gi?
+## Tại sao chọn khóa học này? Giải quyết vấn đề gì?
 
-Day la mot khoa hoc kha dat. Dong thoi, HexSchool (mot bootcamp lap trinh o Dai Loan) vi ly do kinh doanh khong the tu choi nguoi dang ky, nen noi dung khoa hoc buoc phai thiet ke tuong doi don gian.
+Đây là một khóa học khá đắt. Đồng thời, HexSchool (một bootcamp lập trình ở Đài Loan) vì lý do kinh doanh không thể từ chối người đăng ký, nên nội dung khóa học buộc phải thiết kế tương đối đơn giản.
 
-Nhin vao nhung dieu kien nay, dang ky khoa hoc co ve khong dang lam. Nhung thuc te van co mot so khia canh dang can nhac:
+Nhìn vào những điều kiện này, đăng ký khóa học có vẻ không đáng làm. Nhưng thực tế vẫn có một số khía cạnh đáng cân nhắc:
 
-### Lam viec nhom
+### Làm việc nhóm
 
-Vi ngay tu dau da phai chia nhom lam viec cung nhau, va hau het nguoi tham gia deu tu frontend chuyen sang, chua co kinh nghiem backend, nen day la co hoi de luyen tap giao tiep va day nhanh tien do trong phat trien backend.
+Vì ngay từ đầu đã phải chia nhóm làm việc cùng nhau, và hầu hết người tham gia đều từ frontend chuyển sang, chưa có kinh nghiệm backend, nên đây là cơ hội để luyện tập giao tiếp và đẩy nhanh tiến độ trong phát triển backend.
 
-Tu mot goc nhin khac, nhung nguoi dong hanh nay trong tuong lai cung co the giup do lan nhau. Day cung la mot cach xay dung moi quan he nghe nghiep.
+Từ một góc nhìn khác, những người đồng hành này trong tương lai cũng có thể giúp đỡ lẫn nhau. Đây cũng là một cách xây dựng mối quan hệ nghề nghiệp.
 
-### Chi phi chim
+### Chi phí chìm
 
-Nhu da noi, khoa hoc kha dat. Du ban luoi nhu toi, neu khong muon mat trang so tien nay, ban bat buoc phai bo thoi gian va cong suc sau gio lam de theo kip tien do du an, dam bao hoan thanh truoc deadline. Dieu nay cung giup ban dat duoc muc tieu tu ky luat o mot muc do nao do.
+Như đã nói, khóa học khá đắt. Dù bạn lười như tôi, nếu không muốn mất trắng số tiền này, bạn bắt buộc phải bỏ thời gian và công sức sau giờ làm để theo kịp tiến độ dự án, đảm bảo hoàn thành trước deadline. Điều này cũng giúp bạn đạt được mục tiêu tự kỷ luật ở một mức độ nào đó.
 
-### Goc nhin moi
+### Góc nhìn mới
 
-Vi toan bo du an duoc lam tu dau den cuoi — tu thiet ke y tuong den phat trien — du khach quan ma noi la kha so luoc, nhung tat ca thanh vien deu co the trai qua mot lan quy trinh cua PM, UI/UX, frontend, backend. Dieu nay co the mang lai nhung goc nhin moi cho cong viec tuong lai.
+Vì toàn bộ dự án được làm từ đầu đến cuối — từ thiết kế ý tưởng đến phát triển — dù khách quan mà nói là khá sơ lược, nhưng tất cả thành viên đều có thể trải qua một lần quy trình của PM, UI/UX, frontend, backend. Điều này có thể mang lại những góc nhìn mới cho công việc tương lai.
 
-## Noi dung khoa hoc
+## Nội dung khóa học
 
-Ve noi dung khoa hoc: ngoai cac thao tac co ban voi `MongoDB` va viec implement `API` bang `Node.js`, phan co gia tri nhat theo toi la viec tich hop cac dich vu ben thu ba — nhu dang nhap ben thu ba va tich hop thanh toan. Phan nay kha kho khan, can nhieu thoi gian de doc tai lieu cua tung dich vu. Khi duoc day trong khoa hoc, ban tiet kiem duoc thoi gian nghien cuu.
+Về nội dung khóa học: ngoài các thao tác cơ bản với `MongoDB` và việc implement `API` bằng `Node.js`, phần có giá trị nhất theo tôi là việc tích hợp các dịch vụ bên thứ ba — như đăng nhập bên thứ ba và tích hợp thanh toán. Phần này khá khó khăn, cần nhiều thời gian để đọc tài liệu của từng dịch vụ. Khi được dạy trong khóa học, bạn tiết kiệm được thời gian nghiên cứu.
 
-Ngoai ra, mot so vi du thiet ke trong khoa hoc van dua tren pattern `MVC`. Nhom phai tu thuc hien viec tach biet frontend va backend khi lam du an, dieu nay cung can thoi gian suy nghi.
+Ngoài ra, một số ví dụ thiết kế trong khóa học vẫn dựa trên pattern `MVC`. Nhóm phải tự thực hiện việc tách biệt frontend và backend khi làm dự án, điều này cũng cần thời gian suy nghĩ.
 
-Mot so noi dung khoa hoc duoc thue ngoai day truc tiep, nen co the xuat hien mot so khac biet. Vi du, phan huong dan unit testing duoc cung cap cho frontend. Nen neu muon luyen tap unit testing cho backend, nhom phai tu tim hieu.
+Một số nội dung khóa học được thuê ngoài dạy trực tiếp, nên có thể xuất hiện một số khác biệt. Ví dụ, phần hướng dẫn unit testing được cung cấp cho frontend. Nên nếu muốn luyện tập unit testing cho backend, nhóm phải tự tìm hiểu.
 
-## Thuc hien du an (cam nhan cuc ky chu quan)
+## Thực hiện dự án (cảm nhận cực kỳ chủ quan)
 
-Thuc hien du an la phan co gia tri nhat cua khoa hoc theo toi. Va dieu quan trong nhat chinh la su hop tac va lap ke hoach ben trong nhom.
+Thực hiện dự án là phần có giá trị nhất của khóa học theo tôi. Và điều quan trọng nhất chính là sự hợp tác và lập kế hoạch bên trong nhóm.
 
-### Hay thanh that truoc khi chia nhom
+### Hãy thành thật trước khi chia nhóm
 
-Truoc khi chia nhom, se co phan tu danh gia nang luc ca nhan. Neu co linh vuc ban chua quen, hay thanh that. Neu chenh lech trinh do trong nhom qua lon, rat de xay ra bat dong nghiem trong, khien du an khong the tien hanh suon se.
+Trước khi chia nhóm, sẽ có phần tự đánh giá năng lực cá nhân. Nếu có lĩnh vực bạn chưa quen, hãy thành thật. Nếu chênh lệch trình độ trong nhóm quá lớn, rất dễ xảy ra bất đồng nghiêm trọng, khiến dự án không thể tiến hành suôn sẻ.
 
-### Danh thoi gian du phong cho phat trien
+### Dành thời gian dự phòng cho phát triển
 
-Vi hau het moi nguoi chuyen tu frontend sang backend, co rat nhieu van de ma truoc day frontend khong gap phai se lam cham tien do. Vi du: sau khi tich hop thanh toan, chac chan phai xu ly van de don hang, va don hang lai lien quan den thoi gian giao dich.
+Vì hầu hết mọi người chuyển từ frontend sang backend, có rất nhiều vấn đề mà trước đây frontend không gặp phải sẽ làm chậm tiến độ. Ví dụ: sau khi tích hợp thanh toán, chắc chắn phải xử lý vấn đề đơn hàng, và đơn hàng lại liên quan đến thời gian giao dịch.
 
-Doi voi frontend, truoc day hau nhu khong can suy nghi ve nhung dieu nay — chi can goi API roi hien thi danh sach. Nhung voi backend, tat ca nhung van de nay deu phai duoc xem xet.
+Đối với frontend, trước đây hầu như không cần suy nghĩ về những điều này — chỉ cần gọi API rồi hiển thị danh sách. Nhưng với backend, tất cả những vấn đề này đều phải được xem xét.
 
-### Dat muc tieu la dua du an len production
+### Đặt mục tiêu là đưa dự án lên production
 
-Hay nghiem tuc xem xet cac diem sau:
+Hãy nghiêm túc xem xét các điểm sau:
 
-- Hau het thanh vien deu phai di lam, chi co the dau tu thoi gian co han (ban khong the doan truoc lieu thanh vien co dang chiu ap luc cong viec hay tang ca khong)
-- Deadline rat gap, thoi gian phat trien thuc te co han
-- Hau het thanh vien khong co kinh nghiem backend, chac chan se gap tro ngai
+- Hầu hết thành viên đều phải đi làm, chỉ có thể đầu tư thời gian có hạn (bạn không thể đoán trước liệu thành viên có đang chịu áp lực công việc hay tăng ca không)
+- Deadline rất gấp, thời gian phát triển thực tế có hạn
+- Hầu hết thành viên không có kinh nghiệm backend, chắc chắn sẽ gặp trở ngại
 
-Nen muc tieu giai doan dau la phat trien mot san pham dung duoc — khong phai mot san pham hoan hao. Dung suy nghi qua nhieu ve kien truc, toi uu hoa, testing o giai doan nay. Nhung thu do de sau.
+Nên mục tiêu giai đoạn đầu là phát triển một sản phẩm dùng được — không phải một sản phẩm hoàn hảo. Đừng suy nghĩ quá nhiều về kiến trúc, tối ưu hóa, testing ở giai đoạn này. Những thứ đó để sau.
 
-Neu theo duoi su hoan hao qua muc, ngoai viec gay tac nghen tien do phat trien, dieu dang so hon la co the gay ra ran nut trong nhom (du loai xung dot tiem an, dac biet khi ban khong the biet lieu thanh vien co dang chiu ap luc cong viec ban ngay hay khong). Mot khi nhom da ran nut, du an co 94,87% la that bai. Mot tinh nang xau nhung chay duoc co the tao dong luc rat lon cho ca nhom.
+Nếu theo đuổi sự hoàn hảo quá mức, ngoài việc gây tắc nghẽn tiến độ phát triển, điều đáng sợ hơn là có thể gây ra rạn nứt trong nhóm (dù loại xung đột tiềm ẩn, đặc biệt khi bạn không thể biết liệu thành viên có đang chịu áp lực công việc ban ngày hay không). Một khi nhóm đã rạn nứt, dự án có 94,87% là thất bại. Một tính năng xấu nhưng chạy được có thể tạo động lực rất lớn cho cả nhóm.
 
-Dac biet tranh viec mo rong cong nghe su dung khong gioi han. Voi frontend, khong nen xuat hien tinh huong su dung dong thoi ca `React` lan `Vue`. Du ai do trong nhom rat gioi mot framework, khong co nghia la nguoi khac cung co the hoc nhanh va ap dung vao phat trien.
+Đặc biệt tránh việc mở rộng công nghệ sử dụng không giới hạn. Với frontend, không nên xuất hiện tình huống sử dụng đồng thời cả `React` lẫn `Vue`. Dù ai đó trong nhóm rất giỏi một framework, không có nghĩa là người khác cũng có thể học nhanh và áp dụng vào phát triển.
 
-### Mo rong va toi uu
+### Mở rộng và tối ưu
 
-Khi du an hoan thanh chuc nang vai tro dau tien, thuong co the hieu la giai doan mot da ket thuc. Ngoai viec co the tho phao mot chut, ban co the bat dau suy nghi ve viec phat trien cac chuc nang khac, bao gom nhung cong nghe ban muon thu hoac cai thien trai nghiem nguoi dung.
+Khi dự án hoàn thành chức năng vai trò đầu tiên, thường có thể hiểu là giai đoạn một đã kết thúc. Ngoài việc có thể thở phào một chút, bạn có thể bắt đầu suy nghĩ về việc phát triển các chức năng khác, bao gồm những công nghệ bạn muốn thử hoặc cải thiện trải nghiệm người dùng.
 
-Voi du an cua chung toi, chung toi da dan dan them `websocket` messaging, `PWA`, animation, he thong check-in va nhieu thu khac de lam phong phu toan bo trang web.
+Với dự án của chúng tôi, chúng tôi đã dần dần thêm `websocket` messaging, `PWA`, animation, hệ thống check-in và nhiều thứ khác để làm phong phú toàn bộ trang web.
 
-## Ket luan
+## Kết luận
 
-Cuoi cung, day la cac lien ket deploy va Repo cua du an chung toi (frontend va admin). Moi moi nguoi tham khao.
+Cuối cùng, đây là các liên kết deploy và Repo của dự án chúng tôi (frontend và admin). Mời mọi người tham khảo.
 
 ### Frontend (Client)
 
@@ -92,6 +92,6 @@ password : 12345678
 - [Live Host](https://north-cat.github.io/true-salary-story-admin/#/login)
 - [Repo Link](https://github.com/North-Cat/true-salary-story-admin)
 
-## Lien ket lien quan
+## Liên kết liên quan
 
-[Ve viec toi tro thanh coach cua khoa Node.js Software Engineer doanh nghiep 2023 tai HexSchool](https://israynotarray.com/learnexp/20230701/2021952545/)
+[Về việc tôi trở thành coach của khóa Node.js Software Engineer doanh nghiệp 2023 tại HexSchool](https://israynotarray.com/learnexp/20230701/2021952545/)
