--- a/i18n/vi/docusaurus-plugin-content-blog/2023/12-31.md
+++ b/i18n/vi/docusaurus-plugin-content-blog/2023/12-31.md
@@ -1,183 +1,183 @@
 ---
 slug: 2023-year-end-summary
-title: '40 cau hoi tu hoi ban than cuoi nam 2023'
+title: '40 câu hỏi tự hỏi bản thân cuối năm 2023'
 authors: wuzhe0912
 tags: [year-review, life]
 ---
 
-Tong ket cuoi nam 2023 — tu dat cau hoi cho ban than de nhin lai su truong thanh trong nam.
+Tổng kết cuối năm 2023 — tự đặt câu hỏi cho bản thân để nhìn lại sự trưởng thành trong năm.
 
 <!--truncate-->
 
-## 1. Nam nay ban da lam nhung gi chua tung thu truoc day?
+## 1. Năm nay bạn đã làm những gì chưa từng thử trước đây?
 
-- Lam viec hoan toan tu xa.
-- Co con. Tu khi di kem vo sinh, den luc sinh xong roi cham soc sau sinh — cuc ky vat va.
+- Làm việc hoàn toàn từ xa.
+- Có con. Từ khi đi kèm vợ sinh, đến lúc sinh xong rồi chăm sóc sau sinh — cực kỳ vất vả.
 
-## 2. Ban co thuc hien muc tieu dau nam khong?
+## 2. Bạn có thực hiện mục tiêu đầu năm không?
 
-- [x] Du khong duoc lam backend trong cong viec chinh thuc, nhung da tham gia phat trien backend trong du an nhom voi ban be, va co san pham thuc te. Coi nhu da dat muc tieu dau nam.
-- [ ] Xay dung thuong hieu ca nhan — chua dat duoc. Mot phan vi luoi, phan khac vi nua cuoi nam danh het cho viec cham con.
+- [x] Dù không được làm backend trong công việc chính thức, nhưng đã tham gia phát triển backend trong dự án nhóm với bạn bè, và có sản phẩm thực tế. Coi như đã đạt mục tiêu đầu năm.
+- [ ] Xây dựng thương hiệu cá nhân — chưa đạt được. Một phần vì lười, phần khác vì nửa cuối năm dành hết cho việc chăm con.
 
-## 3. Co ai xung quanh ban sinh con khong?
+## 3. Có ai xung quanh bạn sinh con không?
 
-- Co, nha minh cung sinh mot be.
+- Có, nhà mình cũng sinh một bé.
 
-## 4. Co ai xung quanh ban qua doi khong?
+## 4. Có ai xung quanh bạn qua đời không?
 
-- Khong.
+- Không.
 
-## 5. Nam nay ban da di nhung thanh pho/quoc gia nao?
+## 5. Năm nay bạn đã đi những thành phố/quốc gia nào?
 
-Cuoi nam, vo chong minh di du lich Tokyo, Nhat Ban.
+Cuối năm, vợ chồng mình đi du lịch Tokyo, Nhật Bản.
 
-## 6. Nam sau ban muon co gi ma nam nay chua co?
+## 6. Năm sau bạn muốn có gì mà năm nay chưa có?
 
-- Thuong hieu ca nhan — du the nao nam nay phai bat dau lam.
-- Giam can — du cham con chiem nhieu thoi gian, nhung vi suc khoe thi khong the tranh.
+- Thương hiệu cá nhân — dù thế nào năm nay phải bắt đầu làm.
+- Giảm cân — dù chăm con chiếm nhiều thời gian, nhưng vì sức khỏe thì không thể tránh.
 
-## 7. Ngay nao se mai khac sau trong tri nho ban? Tai sao?
+## 7. Ngày nào sẽ mãi khắc sâu trong trí nhớ bạn? Tại sao?
 
-- Ngay 27/6. Nhung gio phut kho khan khi o ben vo luc sinh va su ra doi cua con trai.
+- Ngày 27/6. Những giờ phút khó khăn khi ở bên vợ lúc sinh và sự ra đời của con trai.
 
-## 8. Thanh tuu lon nhat cua ban nam nay la gi?
+## 8. Thành tựu lớn nhất của bạn năm nay là gì?
 
-- Len thuyet trinh ve Side Project cua nhom minh.
-- Tro thanh bo (du noi dau vuot xa tri tuong tuong).
+- Lên thuyết trình về Side Project của nhóm mình.
+- Trở thành bố (dù nỗi đau vượt xa trí tưởng tượng).
 
-## 9. That bai lon nhat la gi?
+## 9. Thất bại lớn nhất là gì?
 
-- Ban dau ky vong co the lam viec tu xa on dinh, nhung chua day mot nam cong ty bat dau cat giam nhan su. Du tim duoc viec moi nhanh, nhung lai khong phai remote — phai doi mat voi viec chuyen ve Taipei.
+- Ban đầu kỳ vọng có thể làm việc từ xa ổn định, nhưng chưa đầy một năm công ty bắt đầu cắt giảm nhân sự. Dù tìm được việc mới nhanh, nhưng lại không phải remote — phải đối mặt với việc chuyển về Taipei.
 
-## 10. Ban da gap nhung kho khan gi?
+## 10. Bạn đã gặp những khó khăn gì?
 
-- Lam viec tu xa mat roi, buoc phai quay lai lam tai van phong.
-- Su tap trung va nang luong bi tieu hao boi viec cham con, thoi gian bi chiem dung va cac bat tien khi ra ngoai.
+- Làm việc từ xa mất rồi, buộc phải quay lại làm tại văn phòng.
+- Sự tập trung và năng lượng bị tiêu hao bởi việc chăm con, thời gian bị chiếm dụng và các bất tiện khi ra ngoài.
 
-## 11. Ban co bi benh hoac chan thuong khong?
+## 11. Bạn có bị bệnh hoặc chấn thương không?
 
-- Ca nha ba nguoi lan luot bi nhiem benh.
+- Cả nhà ba người lần lượt bị nhiễm bệnh.
 
-## 12. Mon do tot nhat ban mua nam nay la gi?
+## 12. Món đồ tốt nhất bạn mua năm nay là gì?
 
-- Qua tang gui cho ban be.
+- Quà tặng gửi cho bạn bè.
 
-## 13. Hanh dong cua ai dang duoc ton vinh?
+## 13. Hành động của ai đáng được tôn vinh?
 
-- Su dung cam cua vo — trong noi dau cuc do van sinh con thanh cong.
+- Sự dũng cảm của vợ — trong nỗi đau cực độ vẫn sinh con thành công.
 
-## 14. Hanh dong cua ai khien ban bat ngo?
+## 14. Hành động của ai khiến bạn bất ngờ?
 
-- Khi biet minh bi sa thai.
+- Khi biết mình bị sa thải.
 
-## 15. Phan lon tien ban tieu vao dau?
+## 15. Phần lớn tiền bạn tiêu vào đâu?
 
 - My son.
 
-## 16. Dieu gi khien ban cuc ky cuc ky hung phan?
+## 16. Điều gì khiến bạn cực kỳ cực kỳ hưng phấn?
 
-- Chuyen di Nhat voi vo.
+- Chuyến đi Nhật với vợ.
 
-## 17. Bai hat nao se khien ban nho mai nam nay?
+## 17. Bài hát nào sẽ khiến bạn nhớ mãi năm nay?
 
-- Khong co bai hat nao dac biet.
+- Không có bài hát nào đặc biệt.
 
-## 18. So voi cung thoi diem nam ngoai, ban vui hon hay buon hon? Gay hon hay map hon? Giau hon hay ngheo hon?
+## 18. So với cùng thời điểm năm ngoái, bạn vui hơn hay buồn hơn? Gầy hơn hay mập hơn? Giàu hơn hay nghèo hơn?
 
-- Tram hon mot chut, vi do kho cua viec nuoi con vuot xa tuong tuong cua vo chong minh.
-- Can nang khong thay doi, nhung van phai tim cach giam.
-- Du chi tieu nam nay cao hon nhieu, nhung bat ngo la khi tong ket, tong tai san van tang mot ty le nhat dinh.
+- Trầm hơn một chút, vì độ khó của việc nuôi con vượt xa tưởng tượng của vợ chồng mình.
+- Cân nặng không thay đổi, nhưng vẫn phải tìm cách giảm.
+- Dù chi tiêu năm nay cao hơn nhiều, nhưng bất ngờ là khi tổng kết, tổng tài sản vẫn tăng một tỷ lệ nhất định.
 
-## 19. Ban muon lam nhieu hon dieu gi?
+## 19. Bạn muốn làm nhiều hơn điều gì?
 
-- Nang cao ky nang chuyen mon mot cach vung chac, dam bao suc canh tranh tren thi truong.
-- Tiep tuc dau tu chung khoan.
-- Nang luc ngoai ngu.
-- Quay lai tap the duc.
+- Nâng cao kỹ năng chuyên môn một cách vững chắc, đảm bảo sức cạnh tranh trên thị trường.
+- Tiếp tục đầu tư chứng khoán.
+- Năng lực ngoại ngữ.
+- Quay lại tập thể dục.
 
-## 20. Ban muon lam it hon dieu gi?
+## 20. Bạn muốn làm ít hơn điều gì?
 
-- Bao ve su tap trung cua ban than.
-- Uong it do ngot.
+- Bảo vệ sự tập trung của bản thân.
+- Uống ít đồ ngọt.
 
-## 21. Ban da nghi le nhu the nao?
+## 21. Bạn đã nghỉ lễ như thế nào?
 
-- Trong nuoc: Thanh pho Satan o Tan Bac.
-- Nuoc ngoai: Tokyo, Nhat Ban.
+- Trong nước: Thành phố Satan ở Tân Bắc.
+- Nước ngoài: Tokyo, Nhật Bản.
 
-## 22. Nam nay ban co yeu khong?
+## 22. Năm nay bạn có yêu không?
 
-- Da ket hon roi, dung nhien phai yeu vo.
+- Đã kết hôn rồi, đương nhiên phải yêu vợ.
 
-## 23. Co ai ma nam nay ban khong thich nhung nam ngoai thi co?
+## 23. Có ai mà năm nay bạn không thích nhưng năm ngoái thì có?
 
-- Khong co gi dac biet.
+- Không có gì đặc biệt.
 
-## 24. Chuong trinh yeu thich cua ban la gi?
+## 24. Chương trình yêu thích của bạn là gì?
 
 - freeCodeCamp.
-- Bohai Xiaoli (mot nha sang tao noi dung lich su Trung Quoc).
+- Bohai Xiaoli (một nhà sáng tạo nội dung lịch sử Trung Quốc).
 
-## 25. Cuon sach hay nhat ban doc nam nay?
+## 25. Cuốn sách hay nhất bạn đọc năm nay?
 
 - "Soft Skills: The Software Developer's Life Manual".
 
-## 26. Kham pha am nhac lon nhat cua ban nam nay?
+## 26. Khám phá âm nhạc lớn nhất của bạn năm nay?
 
-- Phat hien ra loi mot so bai hat cua Wu Bai (nhac si Dai Loan) kha sau sac.
+- Phát hiện ra lời một số bài hát của Wu Bai (nhạc sĩ Đài Loan) khá sâu sắc.
 
-## 27. Bo phim yeu thich cua ban?
+## 27. Bộ phim yêu thích của bạn?
 
-- "Thieu nien va chim diec" (The Boy and the Heron).
+- "Thiếu niên và chim diệc" (The Boy and the Heron).
 
-## 28. Bua an yeu thich cua ban?
+## 28. Bữa ăn yêu thích của bạn?
 
-- Kunikamiso Yakiniku-Don (mon an Nhat Ban).
+- Kunikamiso Yakiniku-Don (món ăn Nhật Bản).
 
-## 29. Ban muon gi va da dat duoc?
+## 29. Bạn muốn gì và đã đạt được?
 
-- Sau dai dich, duoc di du lich nuoc ngoai voi vo — da thanh hien thuc.
+- Sau đại dịch, được đi du lịch nước ngoài với vợ — đã thành hiện thực.
 
-## 30. Ban muon gi nhung khong dat duoc?
+## 30. Bạn muốn gì nhưng không đạt được?
 
-- Hy vong tiep tuc tim duoc viec remote, nhung tam thoi chua co co hoi phu hop.
+- Hy vọng tiếp tục tìm được việc remote, nhưng tạm thời chưa có cơ hội phù hợp.
 
-## 31. Ngay sinh nhat ban da lam gi?
+## 31. Ngày sinh nhật bạn đã làm gì?
 
-- Di an lau don gian voi vo va con.
+- Đi ăn lẩu đơn giản với vợ và con.
 
-## 32. Co dieu gi neu xay ra se khien nam cua ban tron ven hon?
+## 32. Có điều gì nếu xảy ra sẽ khiến năm của bạn trọn vẹn hơn?
 
-- Neu co nhieu viec remote hon de lua chon thi tuyet voi.
+- Nếu có nhiều việc remote hơn để lựa chọn thì tuyệt vời.
 
-## 33. Phong cach thoi trang cua ban nam nay?
+## 33. Phong cách thời trang của bạn năm nay?
 
-- Thoai mai va don gian. Ao ba lo, quan short the thao, giay vai trang.
+- Thoải mái và đơn giản. Áo ba lỗ, quần short thể thao, giày vải trắng.
 
-## 34. Dieu gi giu cho ban tinh tao?
+## 34. Điều gì giữ cho bạn tỉnh táo?
 
-- Nhung cuoc trao doi va suy nghi voi vo.
+- Những cuộc trao đổi và suy nghĩ với vợ.
 
-## 35. Ban nguong mo nhan vat cong chung nao nhat?
+## 35. Bạn ngưỡng mộ nhân vật công chúng nào nhất?
 
 - Sam Altman.
 
-## 36. Van de chinh tri nao khien ban soi noi nhat?
+## 36. Vấn đề chính trị nào khiến bạn sôi nổi nhất?
 
-- Dai Loan co co hoi vuot qua nen chinh tri hai dang, du co le con con duong dai.
+- Đài Loan có cơ hội vượt qua nền chính trị hai đảng, dù có lẽ còn con đường dài.
 
-## 37. Nguoi ban thuong nho nhat la ai?
+## 37. Người bạn thường nhớ nhất là ai?
 
-- Vo va con.
+- Vợ và con.
 
-## 38. Ban moi tot nhat nam nay la ai?
+## 38. Bạn mới tốt nhất năm nay là ai?
 
 - Sherry.
 
-## 39. Bai hoc cuoc song quy gia nhat ban hoc duoc nam nay?
+## 39. Bài học cuộc sống quý giá nhất bạn học được năm nay?
 
-- Khi muon uoc tinh do kho cua mot viec vuot ngoai vung an toan, du nhan len 5-10 lan cung khong qua. Neu khong, khi da lam vao roi, ban moi nhan ra minh tien thoai luong nan.
+- Khi muốn ước tính độ khó của một việc vượt ngoài vùng an toàn, dù nhân lên 5-10 lần cũng không quá. Nếu không, khi đã lâm vào rồi, bạn mới nhận ra mình tiến thoái lưỡng nan.
 
-## 40. Cau noi nao tom tat nam cua ban?
+## 40. Câu nói nào tóm tắt năm của bạn?
 
-- Du tu nhu "hay dung cam buoc ra khoi vung an toan", nhung moi buoc deu vo cung gian nan. Dung la cuoc doi ma.
+- Dù tự nhủ "hãy dũng cảm bước ra khỏi vùng an toàn", nhưng mỗi bước đều vô cùng gian nan. Đúng là cuộc đời mà.
