--- a/i18n/vi/docusaurus-plugin-content-blog/2024/08-11.md
+++ b/i18n/vi/docusaurus-plugin-content-blog/2024/08-11.md
@@ -1,48 +1,48 @@
 ---
 slug: mid-year-reflection-2024
-title: 'Nhin lai giua nam 2024'
+title: 'Nhìn lại giữa năm 2024'
 authors: wuzhe0912
 tags: [career, life]
 ---
 
-Thoi gian troi qua nhanh that su vuot ngoai tuong tuong. Thoang cai da het nua nam 2024, nhung ca nhan cam thay muc do tu ky luat khong cai thien. Nhung gi dat duoc cung chang co gi dang noi, nhung van viet vai dong ghi lai.
+Thời gian trôi qua nhanh thật sự vượt ngoài tưởng tượng. Thoáng cái đã hết nửa năm 2024, nhưng cá nhân cảm thấy mức độ tự kỷ luật không cải thiện. Những gì đạt được cũng chẳng có gì đáng nói, nhưng vẫn viết vài dòng ghi lại.
 
 <!--truncate-->
 
 ## Company
 
-Cuoi nam 2023, cong ty noi minh lam viec tu xa bi giam hoat dong, sau do cat giam mot nua bo phan frontend. Khong may, minh nam trong so do, nen phai quay lai thi truong tim viec moi.
+Cuối năm 2023, công ty nơi mình làm việc từ xa bị giảm hoạt động, sau đó cắt giảm một nửa bộ phận frontend. Không may, mình nằm trong số đó, nên phải quay lại thị trường tìm việc mới.
 
-Cuoi cung minh chon mot cong ty o Taipei. Dung vay, mot cong ty khong ho tro lam tu xa — nen phai quay lai di lam hang ngay, va chi phi tang vot. Phai dua vo con quay ve Taipei thue nha, song va lam viec.
+Cuối cùng mình chọn một công ty ở Taipei. Đúng vậy, một công ty không hỗ trợ làm từ xa — nên phải quay lại đi làm hằng ngày, và chi phí tăng vọt. Phải đưa vợ con quay về Taipei thuê nhà, sống và làm việc.
 
-Moi ngay di lam mot chieu mat 30 den 60 phut, khu hoi gan hai tieng. Cong them tien thue nha va chi phi nuoi con o Taipei, so voi chat luong cuoc song thoi lam remote, chenh lech kha lon. Ve nha co ban cung khong con suc lam gi, da phan thoi gian deu danh cho con.
+Mỗi ngày đi làm một chiều mất 30 đến 60 phút, khứ hồi gần hai tiếng. Cộng thêm tiền thuê nhà và chi phí nuôi con ở Taipei, so với chất lượng cuộc sống thời làm remote, chênh lệch khá lớn. Về nhà cơ bản cũng không còn sức làm gì, đa phần thời gian đều dành cho con.
 
-## Ky thuat
+## Kỹ thuật
 
-Du mieng noi la khong co gi tien bo, nhung nhin lai thi nua nam qua cung lam duoc vai thu:
+Dù miệng nói là không có gì tiến bộ, nhưng nhìn lại thì nửa năm qua cũng làm được vài thứ:
 
-### Tai cau truc he thong quan ly livestream
+### Tái cấu trúc hệ thống quản lý livestream
 
-Tu minh tiep nhan va tai cau truc he thong admin livestream, cai thien quy trinh van hanh va hieu nang tai trang. Them tinh nang xem truoc truc tiep va cai dat ty le anh cua nguoi dien vien, giup doi ngu van hanh lam viec muot hon. Cuoi cung tang toc do phan hoi trang len 40%.
+Tự mình tiếp nhận và tái cấu trúc hệ thống admin livestream, cải thiện quy trình vận hành và hiệu năng tải trang. Thêm tính năng xem trước trực tiếp và cài đặt tỷ lệ ảnh của người diễn viên, giúp đội ngũ vận hành làm việc mượt hơn. Cuối cùng tăng tốc độ phản hồi trang lên 40%.
 
-### Toi uu hoa am thanh game
+### Tối ưu hóa âm thanh game
 
-Tai cau truc cach tich hop am thanh phia frontend cua game: chuyen tu import file tinh sang lay ten file dong. Truoc day them mot bo file am thanh mat 1-2 ngay dev — sau khi sua chi con khoang 2 tieng, hieu quat tang khoang 90%. Dong thoi cung thiet lap quy trinh chuan de nguoi bao tri sau nay co the tu xu ly.
+Tái cấu trúc cách tích hợp âm thanh phía frontend của game: chuyển từ import file tĩnh sang lấy tên file động. Trước đây thêm một bộ file âm thanh mất 1-2 ngày dev — sau khi sửa chỉ còn khoảng 2 tiếng, hiệu quả tăng khoảng 90%. Đồng thời cũng thiết lập quy trình chuẩn để người bảo trì sau này có thể tự xử lý.
 
-### Xay dung thu vien component
+### Xây dựng thư viện component
 
-Ho tro tai cau truc he thong admin game, xay dung thu vien component dung chung va tai lieu dev qua `Storybook`. Day la lan dau minh chay qua toan bo quy trinh xay dung thu vien component mot cach tuong doi day du.
+Hỗ trợ tái cấu trúc hệ thống admin game, xây dựng thư viện component dùng chung và tài liệu dev qua `Storybook`. Đây là lần đầu mình chạy qua toàn bộ quy trình xây dựng thư viện component một cách tương đối đầy đủ.
 
 ## Personal Brand
 
-Dang ky mot khoa hoc ve media va giong noi, dinh ep minh quay video day hoc. Nhung giong nhu 2023, lai tro hoai. Hai nam roi, muc tieu nay van dung yen tai cho. Chi co the noi rang su tri hoan that su rat ngoan co.
+Đăng ký một khóa học về media và giọng nói, định ép mình quay video dạy học. Nhưng giống như 2023, lại trì hoãi. Hai năm rồi, mục tiêu này vẫn đứng yên tại chỗ. Chỉ có thể nói rằng sự trì hoãn thật sự rất ngoan cố.
 
-## Cuoc song
+## Cuộc sống
 
-Noi that, cam nhan lon nhat nua nam nay khong phai la dot pha ky thuat, ma la su met moi tu viec nuoi con. Con cang lon, cang can nhieu su chu y va thoi gian ben canh, cong voi the luc tieu hao cho viec di lam, thoi gian sau gio lam gan nhu bi chiem het.
+Nói thật, cảm nhận lớn nhất nửa năm nay không phải là đột phá kỹ thuật, mà là sự mệt mỏi từ việc nuôi con. Con càng lớn, càng cần nhiều sự chú ý và thời gian bên cạnh, cộng với thể lực tiêu hao cho việc đi làm, thời gian sau giờ làm gần như bị chiếm hết.
 
-Tuong lai hy vong co the lam viec tu xa hoac hybrid la chinh, de mot ngay nao do co the thoat khoi [su rang buoc cua mot thanh pho cu the](https://amaca.substack.com/p/how-to-become-a-millionaire-without).
+Tương lai hy vọng có thể làm việc từ xa hoặc hybrid là chính, để một ngày nào đó có thể thoát khỏi [sự ràng buộc của một thành phố cụ thể](https://amaca.substack.com/p/how-to-become-a-millionaire-without).
 
-## Hau ky
+## Hậu kỳ
 
-Cuoi thang 7, minh roi cong ty do va nhan duoc mot cong viec full remote, luong cung tot hon. Coi nhu doi nua nam di lam hang ngay lay ve mot ket qua kha on. Gio hy vong tan dung su linh hoat cua remote de thuc su bat tay vao nhung thu da tri hoan bao lau nay.
+Cuối tháng 7, mình rời công ty đó và nhận được một công việc full remote, lương cũng tốt hơn. Coi như đổi nửa năm đi làm hằng ngày lấy về một kết quả khá ổn. Giờ hy vọng tận dụng sự linh hoạt của remote để thực sự bắt tay vào những thứ đã trì hoãn bao lâu nay.
