--- a/i18n/vi/docusaurus-plugin-content-blog/2024/12-31.md
+++ b/i18n/vi/docusaurus-plugin-content-blog/2024/12-31.md
@@ -1,179 +1,179 @@
 ---
 slug: 2024-year-end-summary
-title: '40 cau hoi tu hoi ban than cuoi nam 2024'
+title: '40 câu hỏi tự hỏi bản thân cuối năm 2024'
 authors: wuzhe0912
 tags: [year-review, life]
 ---
 
-Tong ket cuoi nam 2024 — tiep tuc dinh dang nam ngoai, mot lan nua tu dat cau hoi cho ban than de nhin lai su truong thanh trong nam.
+Tổng kết cuối năm 2024 — tiếp tục định dạng năm ngoái, một lần nữa tự đặt câu hỏi cho bản thân để nhìn lại sự trưởng thành trong năm.
 
 <!--truncate-->
 
-## 1. Nam nay ban da lam nhung gi chua tung thu truoc day?
+## 1. Năm nay bạn đã làm những gì chưa từng thử trước đây?
 
-- Tham gia khoa hoc gia su cua HexSchool (mot bootcamp lap trinh o Dai Loan), bat dau quay video day hoc va thu day that su. Mot viec da tri hoan hai nam, cuoi cung nam nay moi buoc duoc buoc dau tien.
-- Khi chuyen ve Taipei, thue mot can ho gan nui. Moi sang nhin thay nui thi kha de chiu, nhung noi kho di lam hoan toan che lap thu vui do. Nua nam sau thi roi di.
+- Tham gia khóa học gia sư của HexSchool (một bootcamp lập trình ở Đài Loan), bắt đầu quay video dạy học và thử dạy thật sự. Một việc đã trì hoãn hai năm, cuối cùng năm nay mới bước được bước đầu tiên.
+- Khi chuyển về Taipei, thuê một căn hộ gần núi. Mỗi sáng nhìn thấy núi thì khá dễ chịu, nhưng nỗi khổ đi làm hoàn toàn che lấp thú vui đó. Nửa năm sau thì rời đi.
 
-## 2. Ban co thuc hien muc tieu dau nam khong?
+## 2. Bạn có thực hiện mục tiêu đầu năm không?
 
-Dau nam khong he dat muc tieu, vi dang bat lu tim viec, toan bo con nguoi trong trang thai cang thang. Neu bat buoc phai noi, thi song sot chinh la muc tieu.
+Đầu năm không hề đặt mục tiêu, vì đang bất lự tìm việc, toàn bộ con người trong trạng thái căng thẳng. Nếu bắt buộc phải nói, thì sống sót chính là mục tiêu.
 
-## 3. Co ai xung quanh ban sinh con khong?
+## 3. Có ai xung quanh bạn sinh con không?
 
-Khong.
+Không.
 
-## 4. Co ai xung quanh ban qua doi khong?
+## 4. Có ai xung quanh bạn qua đời không?
 
-Khong.
+Không.
 
-## 5. Nam nay ban da di nhung thanh pho/quoc gia nao?
+## 5. Năm nay bạn đã đi những thành phố/quốc gia nào?
 
-Khong di dau ca. Nam nay qua ban ron, khong co suc de len ke hoach di du lich.
+Không đi đâu cả. Năm nay quá bận rộn, không có sức để lên kế hoạch đi du lịch.
 
-## 6. Nam sau ban muon co gi ma nam nay chua co?
+## 6. Năm sau bạn muốn có gì mà năm nay chưa có?
 
-- Chat luong cuoc song tot hon — khong chi la vong lap kiem tien va nuoi con.
-- Thuong hieu ca nhan that su khoi dong — khong the tri hoan nua, da nam thu ba roi.
-- Chuyen doi ky thuat, huong toi Software / Product Engineer.
+- Chất lượng cuộc sống tốt hơn — không chỉ là vòng lặp kiếm tiền và nuôi con.
+- Thương hiệu cá nhân thật sự khởi động — không thể trì hoãn nữa, đã năm thứ ba rồi.
+- Chuyển đổi kỹ thuật, hướng tới Software / Product Engineer.
 
-## 7. Ngay nao se mai khac sau trong tri nho ban? Tai sao?
+## 7. Ngày nào sẽ mãi khắc sâu trong trí nhớ bạn? Tại sao?
 
-Ngay cuoi thang 7 khi roi cong ty Taipei va nhan duoc offer full remote. Nua nam di lam hang ngay cuoi cung cung doi lai duoc ket qua.
+Ngày cuối tháng 7 khi rời công ty Taipei và nhận được offer full remote. Nửa năm đi làm hằng ngày cuối cùng cũng đổi lại được kết quả.
 
-## 8. Thanh tuu lon nhat cua ban nam nay la gi?
+## 8. Thành tựu lớn nhất của bạn năm nay là gì?
 
-- Nua cuoi nam thanh cong chuyen lai ve lam full remote, luong cung tot hon.
-- Tham gia khoa gia su HexSchool, quay video day hoc va thu day frontend. Voi mot nguoi tri hoan lau nhu minh, day la mot buoc dot pha lon.
-- Trong mot cong ty khong co quy trinh gi ro rang, gap duoc nhom dong nghiep frontend kha tot, tro thanh ban be.
+- Nửa cuối năm thành công chuyển lại về làm full remote, lương cũng tốt hơn.
+- Tham gia khóa gia sư HexSchool, quay video dạy học và thử dạy frontend. Với một người trì hoãn lâu như mình, đây là một bước đột phá lớn.
+- Trong một công ty không có quy trình gì rõ ràng, gặp được nhóm đồng nghiệp frontend khá tốt, trở thành bạn bè.
 
-## 9. That bai lon nhat la gi?
+## 9. Thất bại lớn nhất là gì?
 
-Thuong hieu ca nhan van khong co san pham cu the. Du da bat dau thu day, nhung van chi dung o giai doan "luyen tap", chua that su huong ra cong chung.
+Thương hiệu cá nhân vẫn không có sản phẩm cụ thể. Dù đã bắt đầu thử dạy, nhưng vẫn chỉ dừng ở giai đoạn "luyện tập", chưa thật sự hướng ra công chúng.
 
-## 10. Ban da gap nhung kho khan gi?
+## 10. Bạn đã gặp những khó khăn gì?
 
-- Nua dau nam dua vo con chuyen ve Taipei, chi phi thue nha tang vot, di lam tieu hao the luc va thoi gian.
-- Ban dau gui con di nha tre, nhung cu om benh hoai, cuoi cung phai bo va tim nguoi giu tre. May man la tim duoc mot nguoi rat tot.
+- Nửa đầu năm đưa vợ con chuyển về Taipei, chi phí thuê nhà tăng vọt, đi làm tiêu hao thể lực và thời gian.
+- Ban đầu gửi con đi nhà trẻ, nhưng cứ ốm bệnh hoài, cuối cùng phải bỏ và tìm người giữ trẻ. May mắn là tìm được một người rất tốt.
 
-## 11. Ban co bi benh hoac chan thuong khong?
+## 11. Bạn có bị bệnh hoặc chấn thương không?
 
-Be nha thi om kha nhieu.
+Bé nhà thì ốm khá nhiều.
 
-## 12. Mon do tot nhat ban mua nam nay la gi?
+## 12. Món đồ tốt nhất bạn mua năm nay là gì?
 
-Khong co gi dac biet an tuong.
+Không có gì đặc biệt ấn tượng.
 
-## 13. Hanh dong cua ai dang duoc ton vinh?
+## 13. Hành động của ai đáng được tôn vinh?
 
-Vo nam nay chiu dung qua nhieu — chuyen nha, cham con, thich nghi moi truong moi. Cam on em.
+Vợ năm nay chịu đựng quá nhiều — chuyển nhà, chăm con, thích nghi môi trường mới. Cảm ơn em.
 
-## 14. Hanh dong cua ai khien ban bat ngo?
+## 14. Hành động của ai khiến bạn bất ngờ?
 
-Khong co gi dac biet.
+Không có gì đặc biệt.
 
-## 15. Phan lon tien ban tieu vao dau?
+## 15. Phần lớn tiền bạn tiêu vào đâu?
 
-Tien thue nha Taipei va con nho. Giong nam ngoai, My son van la khoan chi lon nhat.
+Tiền thuê nhà Taipei và con nhỏ. Giống năm ngoái, My son vẫn là khoản chi lớn nhất.
 
-## 16. Dieu gi khien ban cuc ky hung phan?
+## 16. Điều gì khiến bạn cực kỳ hưng phấn?
 
-Khoanh khac nhan duoc offer full remote.
+Khoảnh khắc nhận được offer full remote.
 
-## 17. Bai hat nao se khien ban nho mai nam nay?
+## 17. Bài hát nào sẽ khiến bạn nhớ mãi năm nay?
 
-Khong co bai hat nao dac biet.
+Không có bài hát nào đặc biệt.
 
-## 18. So voi cung thoi diem nam ngoai, ban vui hon hay buon hon? Gay hon hay map hon? Giau hon hay ngheo hon?
+## 18. So với cùng thời điểm năm ngoái, bạn vui hơn hay buồn hơn? Gầy hơn hay mập hơn? Giàu hơn hay nghèo hơn?
 
-Cung tuong tu. Khong co thay doi kich tinh, chi la lien tuc dao dong giua on dinh va met moi.
+Cũng tương tự. Không có thay đổi kịch tính, chỉ là liên tục dao động giữa ổn định và mệt mỏi.
 
-## 19. Ban muon lam nhieu hon dieu gi?
+## 19. Bạn muốn làm nhiều hơn điều gì?
 
-- San xuat noi dung cho thuong hieu ca nhan, du la video hay bai viet.
-- Chieu sau ky thuat — khong chi hoan thanh yeu cau cong viec, ma hieu duoc tang ben duoi.
-- Tap the duc.
+- Sản xuất nội dung cho thương hiệu cá nhân, dù là video hay bài viết.
+- Chiều sâu kỹ thuật — không chỉ hoàn thành yêu cầu công việc, mà hiểu được tầng bên dưới.
+- Tập thể dục.
 
-## 20. Ban muon lam it hon dieu gi?
+## 20. Bạn muốn làm ít hơn điều gì?
 
-- Lo lang vo nghia.
-- Tri hoan.
+- Lo lắng vô nghĩa.
+- Trì hoãn.
 
-## 21. Ban da nghi le nhu the nao?
+## 21. Bạn đã nghỉ lễ như thế nào?
 
-O nha cham con.
+Ở nhà chăm con.
 
-## 22. Nam nay ban co yeu khong?
+## 22. Năm nay bạn có yêu không?
 
-Van nhu nhip cu voi vo.
+Vẫn như nhịp cũ với vợ.
 
-## 23. Co ai ma nam nay ban khong thich nhung nam ngoai thi co?
+## 23. Có ai mà năm nay bạn không thích nhưng năm ngoái thì có?
 
-Khong.
+Không.
 
-## 24. Chuong trinh yeu thich cua ban la gi?
+## 24. Chương trình yêu thích của bạn là gì?
 
-Khong theo dang gi dac biet.
+Không theo dạng gì đặc biệt.
 
-## 25. Cuon sach hay nhat ban doc nam nay?
+## 25. Cuốn sách hay nhất bạn đọc năm nay?
 
-Khong doc xong cuon nao. Thoi gian bi cat nho qua.
+Không đọc xong cuốn nào. Thời gian bị cắt nhỏ quá.
 
-## 26. Kham pha am nhac lon nhat cua ban nam nay?
+## 26. Khám phá âm nhạc lớn nhất của bạn năm nay?
 
-Khong.
+Không.
 
-## 27. Bo phim yeu thich cua ban?
+## 27. Bộ phim yêu thích của bạn?
 
-Khong co gi dang nho.
+Không có gì đáng nhớ.
 
-## 28. Bua an yeu thich cua ban?
+## 28. Bữa ăn yêu thích của bạn?
 
-Khong nho. Nam nay an com luc nao cung voi.
+Không nhớ. Năm nay ăn cơm lúc nào cũng vội.
 
-## 29. Ban muon gi va da dat duoc?
+## 29. Bạn muốn gì và đã đạt được?
 
-Lam viec full remote.
+Làm việc full remote.
 
-## 30. Ban muon gi nhung khong dat duoc?
+## 30. Bạn muốn gì nhưng không đạt được?
 
-Di du lich nuoc ngoai. Nam ngoai di Nhat, nam nay khong di dau.
+Đi du lịch nước ngoài. Năm ngoái đi Nhật, năm nay không đi đâu.
 
-## 31. Ngay sinh nhat ban da lam gi?
+## 31. Ngày sinh nhật bạn đã làm gì?
 
-An com don gian voi gia dinh.
+Ăn cơm đơn giản với gia đình.
 
-## 32. Co dieu gi neu xay ra se khien nam cua ban tron ven hon?
+## 32. Có điều gì nếu xảy ra sẽ khiến năm của bạn trọn vẹn hơn?
 
-Neu dau nam da tim duoc viec remote, thi khong phai chuyen len Taipei roi lai chuyen ve.
+Nếu đầu năm đã tìm được việc remote, thì không phải chuyển lên Taipei rồi lại chuyển về.
 
-## 33. Phong cach thoi trang cua ban nam nay?
+## 33. Phong cách thời trang của bạn năm nay?
 
-Giong nam ngoai, thoai mai va don gian.
+Giống năm ngoái, thoải mái và đơn giản.
 
-## 34. Dieu gi giu cho ban tinh tao?
+## 34. Điều gì giữ cho bạn tỉnh táo?
 
-Nhung nguoi ban quen o khoa gia su HexSchool va nhom dong nghiep frontend tot. Trong mot cong ty khong co quy trinh gi, su ho tro giua dong nghiep cang quan trong hon.
+Những người bạn quen ở khóa gia sư HexSchool và nhóm đồng nghiệp frontend tốt. Trong một công ty không có quy trình gì, sự hỗ trợ giữa đồng nghiệp càng quan trọng hơn.
 
-## 35. Ban nguong mo nhan vat cong chung nao nhat?
+## 35. Bạn ngưỡng mộ nhân vật công chúng nào nhất?
 
-Khong ai dac biet.
+Không ai đặc biệt.
 
-## 36. Van de chinh tri nao khien ban soi noi nhat?
+## 36. Vấn đề chính trị nào khiến bạn sôi nổi nhất?
 
-Khong. Nam nay muc do quan tam chinh tri giam xuong thap nhat.
+Không. Năm nay mức độ quan tâm chính trị giảm xuống thấp nhất.
 
-## 37. Nguoi ban thuong nho nhat la ai?
+## 37. Người bạn thường nhớ nhất là ai?
 
-Vo va con.
+Vợ và con.
 
-## 38. Ban moi tot nhat nam nay la ai?
+## 38. Bạn mới tốt nhất năm nay là ai?
 
-Nhom dong nghiep frontend va cac ban o khoa gia su HexSchool.
+Nhóm đồng nghiệp frontend và các bạn ở khóa gia sư HexSchool.
 
-## 39. Bai hoc cuoc song quy gia nhat ban hoc duoc nam nay?
+## 39. Bài học cuộc sống quý giá nhất bạn học được năm nay?
 
-Giong nam ngoai: nhieu viec kho hon du kien rat nhieu, nhung chi can vuot qua, nhin lai thi thuc ra cung khong den noi nao. Nua dau nam tuong di lam se dien, nua cuoi nam quay lai remote thi khoang thoi gian do lai tro thanh mot cau chuyen kha on.
+Giống năm ngoái: nhiều việc khó hơn dự kiến rất nhiều, nhưng chỉ cần vượt qua, nhìn lại thì thực ra cũng không đến nỗi nào. Nửa đầu năm tưởng đi làm sẽ điên, nửa cuối năm quay lại remote thì khoảng thời gian đó lại trở thành một câu chuyện khá ổn.
 
-## 40. Cau noi nao tom tat nam cua ban?
+## 40. Câu nói nào tóm tắt năm của bạn?
 
-"Co truoc da, tot sau" — nua dau nam lo song sot, nua cuoi nam moi bat dau tu tu quay lai quy dao.
+"Có trước đã, tốt sau" — nửa đầu năm lo sống sót, nửa cuối năm mới bắt đầu từ từ quay lại quỹ đạo.
